@@ -42,10 +42,15 @@ repositories {
         url = 'https://simulation.tudelft.nl/maven/'
     }
 
-    // Netlogo and all of it's dependencies are in ../lib
-    flatDir {
-        dirs '../lib'
+    maven {
+        url = 'https://dl.cloudsmith.io/public/netlogo/netlogo/maven/'
+        // https://cloudsmith.io/orgs/netlogo/
     }
+
+    // Netlogo and all of it's dependencies are in ../lib
+//    flatDir {
+//        dirs '../lib'
+//    }
 }
 
 dependencies {
@@ -114,6 +119,7 @@ task factorImportance(type: JavaExec) {
 test {
     // All the tests are run by default. This is just here so they can be skipped if desired with "gradle build -x test"
     systemProperties = System.properties
+	jvmArgs = ["--add-opens", "java.base/java.lang.ref=ALL-UNNAMED"]
 }
 
 
